examples/example-application-01-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: application-01
spec:
  ports:
    - port: 80
      name: tcp
      protocol: TCP
      targetPort: 80
    - port: 443
      name: https
      protocol: TCP
      targetPort: 443
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: application-01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx:latest
          name: nginx
          ports:
            - containerPort: 80
            - containerPort: 443
          resources: {}
