examples/example-application-01-httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: nginx-httproute
  namespace: application-01
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/plugins: oidc
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kong
      namespace: kong-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /application-01
      backendRefs:
        - name: nginx
          port: 80
